z-index fixes for poster markers functionality

--- a/jekyll/_includes/nms/nms-desktop.css
+++ b/jekyll/_includes/nms/nms-desktop.css
@@ -65,13 +65,7 @@
 .poster{
 	position: relative;
 }
-.markers{
-
-}
-/*.markers .pulse, */
 .markers .dot{
-	/*background: #D9272E;*/
-	background: {{ site.red }};
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	border-radius: 30px;
@@ -82,25 +76,11 @@
 	top: 59%;
 	/*left: 172px;*/
 	left: 9%;
-	z-index: 10;
+	z-index: 105;
+	/*background: #D9272E;*/
+	background: {{ site.red }};
 }
-/*.markers .pulse{
-	margin-top: -1px;
-	margin-left: -1px;
-	background: #D9272E;
-	border: 1px solid rgba(255,255,255,0.5);
-	-webkit-animation: pulse 3s ease-out;
-	-moz-animation: pulse 3s ease-out;
-	animation: pulse 3s ease-out;
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
-	z-index: 1;
-	opacity: 0;
-}
-*/
-/*.markers .dot.pulse:before{
-	background: #D9272E;
+.markers .dot:before{
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	border-radius: 30px;
@@ -112,17 +92,16 @@
 	top: -1px;
 	left: -1px;
 	border: 1px solid rgba(255,255,255,0.5);
-	-webkit-animation: pulse 3s ease-out;
-	-moz-animation: pulse 3s ease-out;
-	animation: pulse 3s ease-out;
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
+	-webkit-animation: pulse 3s ease-out infinite;
+	-moz-animation: pulse 3s ease-out infinite;
+	animation: pulse 3s ease-out infinite;
 	z-index: 1;
 	opacity: 0;
 	content: "";
-}*/
-/*.markers .dot:hover:before{
+	/*background: #D9272E;*/
+	background: {{site.red}};
+}
+.markers .dot:hover:before{
 	-webkit-animation: none;
 	-moz-animation: none;
 	animation: none;
@@ -131,17 +110,17 @@
 					animation-iteration-count: none;
 	display: none;
 	content: none;
-}*/
-.markers .dot.two		{ top: 46%; left: 41%; }
-.markers .dot.three	{ top: 68%; left: 54%; }
-.markers .dot.four		{ top: 15%; left: 64%; }
-.markers .dot.five		{ top: 51%; left: 70%; }
-.markers .dot.six			{ top: 48%; left: 87%; }
+}
+.markers .dot.two		{ top: 42%; left: 41%; z-index: 125; }
+.markers .dot.three	{ top: 68%; left: 54%; z-index: 135; }
+.markers .dot.four		{ top: 15%; left: 64%; z-index: 145; }
+.markers .dot.five		{ top: 43%; left: 70%; z-index: 155; }
+.markers .dot.six			{ top: 47%; left: 87%; z-index: 165; }
 .markers .pop{
 	padding: 28px 30px;
 	background: #fff;
 	border: 3px solid #D9272E;
-	z-index: 20;
+	z-index: 100;
 	position: absolute;
 	top: 52.25%;
 	left: 12.5%;
@@ -174,11 +153,11 @@
 .markers .pop img{
 	float: right;
 }
-.markers .pop.two		{ top: 52%; left: 20%; z-index: 200; }
-.markers .pop.three	{ top: 74%; left: 33%; z-index: 300; }
-.markers .pop.four		{ top: 21%; left: 43%; z-index: 400; }
-.markers .pop.five		{ top: 57%; left: 49%; z-index: 500; }
-.markers .pop.six		{ top: 41.5%; left: 44.5%; z-index: 600; }
+.markers .pop.two		{ top: 48%; left: 20%; z-index: 120; }
+.markers .pop.three	{ top: 74%; left: 33%; z-index: 130; }
+.markers .pop.four		{ top: 21%; left: 43%; z-index: 140; }
+.markers .pop.five		{ top: 49%; left: 49%; z-index: 150; }
+.markers .pop.six		{ top: 40.5%; left: 44.5%; z-index: 160; }
 .markers .pop.five:after,
 .markers .pop.five:before,
 .markers .pop.four:after,
@@ -232,4 +211,23 @@
 	  50% { transform: scale(1.1); opacity: 0.3; }
 	  75% { transform: scale(1.5); opacity: 0.5; }
 	100% { transform: scale(2.0); opacity: 0.0; }
+}
+
+@-moz-keyframes pulsing{
+	    0% { color: {{site.red}}; }
+	  25% { color: {{site.red}}; }
+	  50% { color: {{site.darkerGreySelect}}; }
+	100% { color: {{site.red}}; }
+}
+@-webkit-keyframes "pulsing"{
+	    0% { color: {{site.red}}; }
+	  25% { color: {{site.red}}; }
+	  50% { color: {{site.darkerGreySelect}}; }
+	100% { color: {{site.red}}; }
+}
+@keyframes pulsing{
+	    0% { color: {{site.red}}; }
+	  25% { color: {{site.red}}; }
+	  50% { color: {{site.darkerGreySelect}}; }
+	100% { color: {{site.red}}; }
 }
